--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ body {
 	background: rgba(228, 241, 254, 1);
 	padding-bottom: 50px;
 }
-
+header{
+	width: 100%;
+}
+main{
+	width: 100%;
+}
 .menuLine {
 	width: 100%;
 	height: 80px;
